Adoptions for using iputils.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -843,7 +843,7 @@ CONFIG_FEATURE_PREFER_IPV4_ADDRESS=y
 # CONFIG_VERBOSE_RESOLUTION_ERRORS is not set
 # CONFIG_FEATURE_TLS_SHA1 is not set
 CONFIG_ARP=y
-CONFIG_ARPING=y
+# CONFIG_ARPING is not set
 CONFIG_BRCTL=y
 CONFIG_FEATURE_BRCTL_FANCY=y
 CONFIG_FEATURE_BRCTL_SHOW=y
@@ -930,9 +930,9 @@ CONFIG_FEATURE_NSLOOKUP_LONG_OPTIONS=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_FEATURE_NTPD_CONF is not set
 # CONFIG_FEATURE_NTP_AUTH is not set
-CONFIG_PING=y
-CONFIG_PING6=y
-CONFIG_FEATURE_FANCY_PING=y
+# CONFIG_PING is not set
+# CONFIG_PING6 is not set
+# CONFIG_FEATURE_FANCY_PING is not set
 CONFIG_PSCAN=y
 CONFIG_ROUTE=y
 CONFIG_SLATTACH=y
@@ -951,16 +951,16 @@ CONFIG_FEATURE_TELNETD_INETD_WAIT=y
 CONFIG_TFTP=y
 CONFIG_FEATURE_TFTP_PROGRESS_BAR=y
 CONFIG_FEATURE_TFTP_HPA_COMPAT=y
-CONFIG_TFTPD=y
+# CONFIG_TFTPD is not set
 CONFIG_FEATURE_TFTP_GET=y
 CONFIG_FEATURE_TFTP_PUT=y
 CONFIG_FEATURE_TFTP_BLOCKSIZE=y
 # CONFIG_TFTP_DEBUG is not set
 # CONFIG_TLS is not set
-CONFIG_TRACEROUTE=y
-CONFIG_TRACEROUTE6=y
-CONFIG_FEATURE_TRACEROUTE_VERBOSE=y
-CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
+# CONFIG_TRACEROUTE is not set
+# CONFIG_TRACEROUTE6 is not set
+# CONFIG_FEATURE_TRACEROUTE_VERBOSE is not set
+# CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
 CONFIG_TUNCTL=y
 CONFIG_FEATURE_TUNCTL_UG=y
 CONFIG_VCONFIG=y
