--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -13,8 +13,10 @@ BBLAYERS  ?= " \
   ${OEROOT}/meta-yocto-bsp \
   ${OEROOT}/../meta-openembedded/meta-oe \
   ${OEROOT}/../meta-openembedded/meta-python \
+  ${OEROOT}/../meta-openembedded/meta-perl \
   ${OEROOT}/../meta-openembedded/meta-networking \
   ${OEROOT}/../meta-openembedded/meta-filesystems \
+  ${OEROOT}/../meta-security \
   ${OEROOT}/../meta-qt5 \
   ${OEROOT}/../meta-phytec \
   ${OEROOT}/../meta-medusa-bsp \
