Enable CONFIG_NAMESPACES to avoid CONFIG_NET_NS having no effect.

--- a/recipes-kernel/linux/linux-mainline/network.cfg
+++ b/recipes-kernel/linux/linux-mainline/network.cfg
@@ -1,5 +1,6 @@
 # Remark: If possible, modules (=m) are used to reduce the boot time of the kernel.
 
+CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 
 CONFIG_PPP=m
