Added btmon and interceptty ringerbuffer services. Also added location.target in order to split startup of python based stuff.

--- a/recipes-core/systemd/systemd-units/hostname-det.service
+++ b/recipes-core/systemd/systemd-units/hostname-det.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=hostname-det
-After=communication.target
-Wants=communication.target
+After=location.target
+Wants=location.target
 RequiresMountsFor=/mnt/data
 
 [Service]
