--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -14,7 +14,7 @@ Init7 = AT+KBND?;+KCELL=0
 Init8 = AT+CSQ
 Init9 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Dial Command = ATD
-PPPD Option = nodefaultroute
+PPPD Option = noccp
 Stupid Mode = 1
 Check DNS = 0
 Check Def Route = 0
@@ -27,6 +27,7 @@ Init4 = AT+CPIN?
 Init5 = AT+CIMI
 Init6 = AT+COPS?
 Init7 = AT+KBND?
+PPPD Option = +ipv6
 
 [Dialer hl78xx-usb]
 Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
@@ -34,3 +35,4 @@ Init4 = AT+CPIN?
 Init5 = AT+CIMI
 Init6 = AT+COPS?
 Init7 = AT+KBND?
+PPPD Option = +ipv6
