--- a/recipes-kernel/linux/linux-mainline/cgroup.cfg
+++ b/recipes-kernel/linux/linux-mainline/cgroup.cfg
@@ -3,3 +3,8 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 # CONFIG_RT_GROUP_SCHED is not set
+
+CONFIG_CGROUP_BPF=y
+CONFIG_SOCK_CGROUP_DATA=y
+CONFIG_BPF_SYSCALL=y
+# CONFIG_BPF_STREAM_PARSER is not set
