--- a/recipes-kernel/linux/linux-mainline/filesystems.cfg
+++ b/recipes-kernel/linux/linux-mainline/filesystems.cfg
@@ -1,6 +1,9 @@
 # https://cateee.net/lkddb/web-lkddb/FUSE_FS.html
 CONFIG_FUSE_FS=y
 
+# https://cateee.net/lkddb/web-lkddb/AUTOFS4_FS.html
+CONFIG_AUTOFS4_FS=y
+
 # https://cateee.net/lkddb/web-lkddb/OVERLAY_FS.html
 CONFIG_OVERLAY_FS=m
 
