--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -6,8 +6,8 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStartPre=/usr/bin/microcom -t 1000 /dev/ttyACM0
+ExecStartPre=/usr/bin/microcom -t 1000 /dev/ttyGSM0
 ExecStart=/bin/dash -c "wvdial || true"
-ExecStopPost=/bin/dash -c "/bin/echo -e \"AT+CEER\r\" | microcom -t 2000 /dev/ttyACM0"
+ExecStopPost=/bin/dash -c "/bin/echo -e \"AT+CEER\r\" | microcom -t 2000 /dev/ttyGSM0"
 Restart=always
 RestartSec=10
