Build ASIX AX88179/178A driver as Kernel module.

--- a/recipes-kernel/linux/linux-mainline/usb-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/usb-devices.cfg
@@ -4,14 +4,14 @@
 #         Therefore CONFIG_USB_ACM is not built as a module.
 
 # Sierra Wireless HL8548, 1519:0020/0302/0303 (Comneon : HSIC Device)
-# http://cateee.net/lkddb/web-lkddb/USB_ACM.html
-# http://cateee.net/lkddb/web-lkddb/USB_NET_CDCETHER.html
+# https://cateee.net/lkddb/web-lkddb/USB_ACM.html
+# https://cateee.net/lkddb/web-lkddb/USB_NET_CDCETHER.html
 # Remark: CONFIG_USB_SIERRA_NET and CONFIG_USB_SERIAL_SIERRAWIRELESS do not seem to support VID 1519.
 CONFIG_USB_ACM=y
 CONFIG_USB_NET_CDCETHER=m
 
 # Globalsat BU-353-S4, 067b:2303 (Prolific Technology, Inc. : PL2303 Serial Port)
-# http://cateee.net/lkddb/web-lkddb/USB_SERIAL_PL2303.html
+# https://cateee.net/lkddb/web-lkddb/USB_SERIAL_PL2303.html
 # Remark: For development purposes.
 CONFIG_USB_SERIAL_PL2303=m
 
@@ -26,8 +26,12 @@ CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTUSB_BCM=y
 
 # AX88xxx Based USB 2.0 Ethernet Adapters such as D-Link DUB-E100
-# http://cateee.net/lkddb/web-lkddb/USB_NET_AX8817X.html
+# https://cateee.net/lkddb/web-lkddb/USB_NET_AX8817X.html
 CONFIG_USB_NET_AX8817X=m
+
+# ASIX AX88179/178A USB 3.0/2.0 to Gigabit Ethernet
+# https://cateee.net/lkddb/web-lkddb/USB_NET_AX88179_178A.html
+CONFIG_USB_NET_AX88179_178A=m
 
 # Davicom DM96xx based USB 10/100 ethernet devices
 # https://cateee.net/lkddb/web-lkddb/USB_NET_DM9601.html
