Added python3-hhtpx recipe.

--- a/recipes-devtools/python/python3/python3-manifest-with-additions.json
+++ b/recipes-devtools/python/python3/python3-manifest-with-additions.json
@@ -1216,6 +1216,18 @@
         ],
         "cached": []
     },
+    "netrc": {
+        "summary": "Python netrc",
+        "rdepends": [
+            "core"
+        ],
+        "files": [
+            "${libdir}/python${PYTHON_MAJMIN}/netrc.py"
+        ],
+        "cached": [
+            "${libdir}/python${PYTHON_MAJMIN}/netrc.pyc"
+        ]
+    },
     "ntpath": {
         "summary": "Python ntpath",
         "rdepends": [
