Added support for wlan0 interface to connect via wpa-supplicant.

--- a/recipes-kernel/linux/linux-mainline/wifi-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/wifi-devices.cfg
@@ -62,3 +62,11 @@ CONFIG_RTL8192C_COMMON=m
 # CONFIG_R8188EU is not set
 # CONFIG_VT6656 is not set
 # CONFIG_WILC1000_SPI is not set
+
+# Realtek RTL8188EU Wireless LAN NIC driver
+CONFIG_WIRELESS_EXT=y
+CONFIG_WEXT_CORE=y
+CONFIG_WEXT_PROC=y
+CONFIG_WEXT_PRIV=y
+CONFIG_R8188EU=m
+# CONFIG_88EU_AP_MODE is not set
