--- a/recipes-core/systemd/systemd-units/interceptty@.service
+++ b/recipes-core/systemd/systemd-units/interceptty@.service
@@ -4,3 +4,5 @@ Description=interceptty
 [Service]
 Type=simple
 ExecStart=/bin/dash -c '/usr/bin/interceptty -v %I /dev/ttyGSM | interceptty-nicedump | /usr/bin/multilog s1048576 n3 winterceptty /tmp/interceptty'
+ExecStopPost=/bin/rm -rf /tmp/interceptty
+Restart=always
