Adopted udev rules and wvdial for HL78xx at +KUSBCOMP: 1,1,2,3.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -30,6 +30,7 @@ Init7 = AT+KBND?
 PPPD Option = +ipv6
 
 [Dialer hl78xx-usb]
+Modem = /dev/ttyGSM1
 Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
 Init4 = AT+CPIN?
 Init5 = AT+CIMI
