--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -817,7 +817,7 @@ CONFIG_RAIDAUTORUN=y
 CONFIG_READAHEAD=y
 # CONFIG_RFKILL is not set
 # CONFIG_RUNLEVEL is not set
-CONFIG_RX=y
+# CONFIG_RX is not set
 CONFIG_SETFATTR=y
 CONFIG_SETSERIAL=y
 CONFIG_STRINGS=y
