Split fwu-usb into two services fwu-usb-chk and fwu-usb-run. The fwu-usb-chk will then first have a look at the USB drive and only start fwu-usb-run if the USB drive contains something to up- or downgrade. The non-USB fwu services will thus not be stopped any more by the fwu-usb-run service's "Conflicts=" if an empty or non firmware update related USB drive is plugged in.

--- a/recipes-core/systemd/systemd-units/fwu-usb-run.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb-run.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=fwu-usb
+Description=fwu-usb-run
 After=mnt-rfs.service led.service check.target
 Requires=mnt-rfs.service
 Wants=led.service check.target
 
 [Service]
 Type=simple
-ExecStart=/etc/scripts/fwu-usb.sh
+ExecStart=/etc/scripts/fwu-usb-run.sh
