Only send one AT command at a time via wvdial init strings. Especially with HL78xx modules, there are errors or even module reboots for concatenated AT commands.
Also send commands for carrier configuration and selected SIM card
which are required for certain HL78xx SKU's which come with a
selected internal SIM card per default.

Furthermore disabled auto reconnect only use one dial attempt for
the upcoming wvdial.sh handling script.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -6,34 +6,38 @@ Username = user
 Password = pass
 Init1 = ATZ
 Init2 = ATE0
-Init3 = AT+CGMI;+CGMM;+CGMR
-Init4 = ATI9
-Init5 = AT+KGSN=2;+KGSN=3;+CPIN?;+CIMI
-Init6 = AT+COPS?
-Init7 = AT+KBND?;+KCELL=0
-Init8 = AT+CSQ
-Init9 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
+Init10 = AT+CGMI
+Init11 = AT+CGMM
+Init12 = AT+CGMR
+Init13 = ATI9
+Init20 = AT+KGSN=2
+Init21 = AT+KGSN=3
+Init31 = AT+KSIMSEL?
+Init41 = AT+KSIMSEL=0
+Init50 = AT+CPIN?
+Init51 = AT+CIMI
+Init60 = AT+COPS?
+Init61 = AT+KBND?
+Init62 = AT+KCELL=0
+Init63 = AT+CSQ
+Init90 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Dial Command = ATD
 PPPD Option = noccp
 Stupid Mode = 1
+Auto Reconnect = 0
+Dial Attempts = 1
 Check DNS = 0
 Check Def Route = 0
 
 [Dialer hl78xx]
 Modem = /dev/gsmtty1
 Baud = 38400
-Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
-Init4 = AT+CPIN?
-Init5 = AT+CIMI
-Init6 = AT+COPS?
-Init7 = AT+KBND?
+Init30 = AT+KCARRIERCFG?
+Init40 = AT+KCARRIERCFG=0
 PPPD Option = +ipv6
 
 [Dialer hl78xx-usb]
 Modem = /dev/ttyGSM1
-Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
-Init4 = AT+CPIN?
-Init5 = AT+CIMI
-Init6 = AT+COPS?
-Init7 = AT+KBND?
+Init30 = AT+KCARRIERCFG?
+Init40 = AT+KCARRIERCFG=0
 PPPD Option = +ipv6
