Added wvdial.sh for error handling and adjusted USB based wvdial services. Left "wvdial-hl78xx.service" due to testing time constraints.

--- a/recipes-core/systemd/systemd-units/wvdial-hl78xx-usb.service
+++ b/recipes-core/systemd/systemd-units/wvdial-hl78xx-usb.service
@@ -6,6 +6,6 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/bin/dash -c "wvdial hl78xx-usb || true"
+ExecStart=/etc/scripts/wvdial.sh
 Restart=always
 RestartSec=10
