Implement ExecReload on ble-attach.service

--- a/recipes-core/systemd/systemd-units/ble-attach.service
+++ b/recipes-core/systemd/systemd-units/ble-attach.service
@@ -9,6 +9,7 @@ Before=bluetooth.service
 Type=oneshot
 ExecStart=/etc/scripts/ble-attach.sh start
 ExecStop=/etc/scripts/ble-attach.sh stop
+ExecReload=/etc/scripts/ble-attach.sh reload
 RemainAfterExit=yes
 
 [Install]
