Implemented re-configuration of HL78xx's SIM and carrier config.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -6,14 +6,14 @@ Username = user
 Password = pass
 Init1 = ATZ
 Init2 = ATE0
+Init3 = AT+CREG=0
 Init10 = AT+CGMI
 Init11 = AT+CGMM
 Init12 = AT+CGMR
 Init13 = ATI9
 Init20 = AT+KGSN=2
 Init21 = AT+KGSN=3
-Init31 = AT+KSIMSEL?
-Init41 = AT+KSIMSEL=0
+Init40 = AT+KSIMSEL?
 Init50 = AT+CPIN?
 Init51 = AT+CIMI
 Init60 = AT+COPS?
@@ -32,12 +32,12 @@ Check Def Route = 0
 [Dialer hl78xx]
 Modem = /dev/gsmtty1
 Baud = 38400
+Init3 = AT+CEREG=0
 Init30 = AT+KCARRIERCFG?
-Init40 = AT+KCARRIERCFG=0
 PPPD Option = +ipv6
 
 [Dialer hl78xx-usb]
 Modem = /dev/ttyGSM1
+Init3 = AT+CEREG=0
 Init30 = AT+KCARRIERCFG?
-Init40 = AT+KCARRIERCFG=0
 PPPD Option = +ipv6
