Do not start 'peripheral-stem' service automatically by systemd anymore.
This is done to prevent activity on the MPIO I2C bus (I2C4), as the trigger inputs for the (smart) pinion gearshift on ST7 will likely also be read via the MPIO I2C inputs.

--- a/recipes-core/systemd/systemd-units/peripheral-stem.service
+++ b/recipes-core/systemd/systemd-units/peripheral-stem.service
@@ -1,14 +1,8 @@
 [Unit]
 Description=peripheral-stem
-After=peripheral-mpio.service peripheral-pwr.service
-Requires=peripheral-mpio.service
-BindsTo=peripheral-pwr.service
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/etc/scripts/peripheral-stem.sh start
 ExecStop=/etc/scripts/peripheral-stem.sh stop
 RemainAfterExit=yes
-
-[Install]
-WantedBy=basic.target
