systemd-services: force sequential start
Make sure that the services and targets specific to medusa start in
sequential order. This speeds up the boot process. Also make sure they
start much earlier in the boot stage so that the drive target is reached
within ~11.5s instead of >20s.

--- a/recipes-core/systemd/systemd-units/can0.service
+++ b/recipes-core/systemd/systemd-units/can0.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=can0 interface setup
-After=network.target
-Wants=network.target
+DefaultDependencies=no
+After=peripheral-stem.service
 
 [Service]
 Type=oneshot
@@ -11,4 +11,4 @@ ExecReload=/etc/scripts/can0.sh reload
 RemainAfterExit=yes
 
 [Install]
-WantedBy=drive.target
+WantedBy=early-init.target
