--- a/recipes-core/systemd/systemd-units/led.service
+++ b/recipes-core/systemd/systemd-units/led.service
@@ -1,5 +1,8 @@
 [Unit]
 Description=led
+DefaultDependencies=no
+Before=early-init.target
+After=can0.service
 
 [Service]
 Type=oneshot
@@ -8,4 +11,4 @@ ExecStop=/etc/scripts/led.sh stop
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=early-init.target
