Bind fwu-usb-run.service and log-usb.service to mnt-usb.service. Also reset right-hand LED in fwu-usb-run.service upon start.

--- a/recipes-core/systemd/systemd-units/fwu-usb-run.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb-run.service
@@ -3,6 +3,7 @@ Description=fwu-usb-run
 After=mnt-rfs.service led.service check.target
 Requires=mnt-rfs.service
 Wants=led.service check.target
+BindsTo=mnt-usb.service
 
 [Service]
 Type=simple
