hostname-set: start early in the boot process
Make sure hostname-set is called before the applications start so that
they use the correct hostname.

--- a/recipes-core/systemd/systemd-units/hostname-set.service
+++ b/recipes-core/systemd/systemd-units/hostname-set.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=hostname-set
 RequiresMountsFor=/mnt/data
+DefaultDependencies=no
+Before=rsyslog.service
 
 [Service]
 Type=oneshot
