mnt-log: start service after BackendCommunicator
Mount the persistent log after the BackendCommunciator. This is done so
that it will also save the log data relatively early in the shutdown
process to the persistent memory. The start and stop order is given for
systemd and it's not easily possible to have asynchronous start/stop.

--- a/recipes-core/systemd/systemd-units/mnt-log.service
+++ b/recipes-core/systemd/systemd-units/mnt-log.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=mnt-log and journal persisting
-After=location.target
-Wants=location.target
+After=location.target medusa-BackendCommunicator.service
+Wants=location.target medusa-BackendCommunicator.service
 
 [Service]
 Type=oneshot
