mnt-log: do lazy umount when stopping
Do a lazy umount when stopping the mnt-log task. With this we get rid of
a dependency issue on shutdown. journald is still having a file open
under /var/log/journal. Therefore, we can't umount. However, we mount
late in the boot stage (because it is slow) and therefore we need to do
a lazy mount (the umount will happen once all references are destroyed).

--- a/recipes-core/systemd/systemd-units/mnt-log.service
+++ b/recipes-core/systemd/systemd-units/mnt-log.service
@@ -12,6 +12,9 @@ ExecStart=/bin/mount -t overlay -o lowerdir=/var/log/journal,upperdir=/mnt/log/j
 ExecStart=/bin/systemd-tmpfiles --create --prefix=/var/log/journal
 ExecStart=/bin/journalctl --flush
 ExecStop=/bin/journalctl --sync
+ExecStop=/bin/umount -l /var/log/journal
+ExecStop=/bin/umount /mnt/log
+ExecStop=/bin/umount -l /tmp
 RemainAfterExit=yes
 
 [Install]
