--- a/recipes-core/systemd/systemd-units/can0.service
+++ b/recipes-core/systemd/systemd-units/can0.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=can0 interface setup
 DefaultDependencies=no
-After=peripheral-stem.service
+After=peripheral-pwr.service
 
 [Service]
 Type=oneshot
