--- a/recipes-core/systemd/systemd-units/peripheral-stem.service
+++ b/recipes-core/systemd/systemd-units/peripheral-stem.service
@@ -1,13 +1,9 @@
 [Unit]
 Description=peripheral-stem
-After=peripheral-pwr.service
 DefaultDependencies=no
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/etc/scripts/peripheral-stem.sh start
 ExecStop=/etc/scripts/peripheral-stem.sh stop
 RemainAfterExit=yes
-
-[Install]
-WantedBy=early-init.target
