Added *.sha256 and SHA256SUMS and package_version to eol=lf

--- a/.gitattributes
+++ b/.gitattributes
@@ -25,4 +25,7 @@
 *.sample        text eol=lf
 *.service       text eol=lf
 *.sh            text eol=lf
+*.sha256        text eol=lf
 *.txt           text eol=lf
+package_version text eol=lf
+SHA256SUMS      text eol=lf
