Query KSRAT and KSELACQ (HL78xx only) during initialisation.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -16,10 +16,11 @@ Init21 = AT+KGSN=3
 Init40 = AT+KSIMSEL?
 Init50 = AT+CPIN?
 Init51 = AT+CIMI
-Init60 = AT+COPS?
-Init61 = AT+KBND?
-Init62 = AT+KCELL=0
-Init63 = AT+CSQ
+Init60 = AT+KSRAT?
+Init80 = AT+COPS?
+Init81 = AT+KBND?
+Init82 = AT+KCELL=0
+Init83 = AT+CSQ
 Init90 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Dial Command = ATD
 PPPD Option = noccp
@@ -32,12 +33,14 @@ Check Def Route = 0
 [Dialer hl78xx]
 Modem = /dev/gsmtty1
 Baud = 38400
-Init3 = AT+CEREG=0
+Init4 = AT+CEREG=0
 Init30 = AT+KCARRIERCFG?
+Init70 = AT+KSELACQ?
 PPPD Option = +ipv6
 
 [Dialer hl78xx-usb]
 Modem = /dev/ttyGSM1
-Init3 = AT+CEREG=0
+Init4 = AT+CEREG=0
 Init30 = AT+KCARRIERCFG?
+Init70 = AT+KSELACQ?
 PPPD Option = +ipv6
