--- a/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
+++ b/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
@@ -8,7 +8,7 @@
 #  (at your option) any later version.
 
 [Unit]
-Description=udev Coldplug input Devices
+Description=udev Coldplug input and ubi Devices
 Documentation=man:udev(7) man:systemd-udevd.service(8)
 DefaultDependencies=no
 Wants=systemd-udevd.service
