Avoid medusa-BackendCommunicator.service from being started by mnt-log service.
The medusa-BackendCommunicator.service is started upon the appearance of ppp0
and its does not make sense to start it for devices not having a mobile
communication module.

--- a/recipes-core/systemd/systemd-units/mnt-log.service
+++ b/recipes-core/systemd/systemd-units/mnt-log.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=mnt-log and journal persisting
-After=location.target medusa-BackendCommunicator.service
-Wants=location.target medusa-BackendCommunicator.service
+After=location.target
 
 [Service]
 Type=oneshot
