systemd-udev-early-trigger: load st1633 driver before running udev
Make sure that we load the st1633 driver before we run the udev early
trigger command. This makes the touch screen available available earlier
in the boot process.

--- a/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
+++ b/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
@@ -18,6 +18,7 @@ ConditionPathIsReadWrite=/sys
 [Service]
 Type=oneshot
 RemainAfterExit=yes
+ExecStartPre=/sbin/modprobe st1633
 ExecStart=/bin/udevadm trigger -s input --action=add ; /bin/udevadm trigger -s ubi --action=add
 
 [Install]
