Only call udevadm once in systemd-udev-early-trigger.service

--- a/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
+++ b/recipes-core/systemd/systemd-units/systemd-udev-early-trigger.service
@@ -19,7 +19,7 @@ ConditionPathIsReadWrite=/sys
 Type=oneshot
 RemainAfterExit=yes
 ExecStartPre=/sbin/modprobe st1633
-ExecStart=/bin/udevadm trigger -s input --action=add ; /bin/udevadm trigger -s ubi --action=add
+ExecStart=/bin/udevadm trigger -s input -s ubi --action=add
 
 [Install]
 WantedBy=early-init.target
