Introduced gps, gsm, late-init and started targets. This lays the groundwork for making the startup after drive/check target more organized and sequential.

--- a/recipes-core/systemd/systemd-units/gsm.service
+++ b/recipes-core/systemd/systemd-units/gsm.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=gsm
+After=ble.target
+Wants=ble.target
 RequiresMountsFor=/mnt/data
 
 [Service]
@@ -10,4 +12,4 @@ ExecReload=/etc/scripts/gsm.sh reload
 RemainAfterExit=yes
 
 [Install]
-WantedBy=communication.target
+WantedBy=gsm.target
