--- a/recipes-core/systemd/systemd-units/peripheral-pwr.service
+++ b/recipes-core/systemd/systemd-units/peripheral-pwr.service
@@ -10,4 +10,4 @@ ExecStop=/etc/scripts/peripheral-pwr.sh stop
 RemainAfterExit=yes
 
 [Install]
-WantedBy=early-init.target
+WantedBy=sysinit.target
