Let candump-save attempt to finish upon receiving a SIGTERM resp. service stop.
With KillMode=mixed no SIGTERM is sent to child processes (cat, awk, etc.).
In case any child processes would still be around when the stop timeout has
expired, FinalKillSignal would we sent to those processes.

--- a/recipes-core/systemd/systemd-units/candump-manual.service
+++ b/recipes-core/systemd/systemd-units/candump-manual.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=candump manual
+Description=candump-manual
 After=can0.service local-fs.target
 Requires=can0.service
 DefaultDependencies=no
