Use lzo compression for candump-manual and added saving to USB.

--- a/recipes-core/systemd/systemd-units/candump-manual.service
+++ b/recipes-core/systemd/systemd-units/candump-manual.service
@@ -6,7 +6,7 @@ DefaultDependencies=no
 
 [Service]
 Type=simple
-ExecStart=/bin/dash -c '/usr/bin/candump can0,0:0,#FFFFFFFF -t a | /usr/bin/multilog s16777216 n3 wcandump /tmp/candump-manual'
+ExecStart=/bin/dash -c '/usr/bin/candump can0,0:0,#FFFFFFFF -t a | /usr/bin/multilog s4194304 n65 !lzop wcandump.lzo /tmp/candump-manual'
 ExecStopPost=/bin/rm -rf /tmp/candump-manual
 Restart=always
 
