systemd-units: remove (parts of) services which can be solved in device tree
The CAN_SILENT and RGB_ON gpio's are configured directly in the device tree.
The leds_lp5523 driver is compiled directly in the kernel.
See the according changes in meta-medusa-bsp.

--- a/recipes-core/systemd/systemd-units/fwu-usb-run.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb-run.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=fwu-usb-run
-After=mnt-rfs.service led.service check.target
+After=mnt-rfs.service check.target
 Requires=mnt-rfs.service
-Wants=led.service check.target
+Wants=check.target
 BindsTo=mnt-usb.service
 
 [Service]
