Added btop to image.
Remark: htop and nmon are still kept for displaying purposes on device.

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -7,6 +7,7 @@ BBFILES ?= ""
 
 OEROOT := "##OEROOT##"
 BBLAYERS ?= " \
+  ${OEROOT}/../meta-medusa-backport \
   ${OEROOT}/meta \
   ${OEROOT}/meta-poky \
   ${OEROOT}/meta-yocto-bsp \
