Simplified actions upon detecting USB thumb drive.
- The manual candump can now be triggered via USB thumb drive plugin.
- The chk-usb service now determines whether to start fwu, log or candump
  (in that order) whereas fwu-usb-chk was renamed and repurposed.
- The use-case where a USB thumb drive shall be used for multiple things
  (only worked for fwu and log thus far) is not used and not worth maintaining.

--- a/recipes-core/systemd/systemd-units/fwu-usb.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=fwu-usb-run
+Description=fwu-usb
 After=mnt-rfs.service check.target
 Requires=mnt-rfs.service
 Wants=check.target
@@ -7,4 +7,4 @@ BindsTo=mnt-usb.service
 
 [Service]
 Type=simple
-ExecStart=/etc/scripts/fwu-usb-run.sh
+ExecStart=/etc/scripts/fwu-usb.sh
