Added Requires=local-fs.target for candump (in addition to After=).
Whereas it it unlikely that local-fs does not work (which would
lead to more severe issues than candump not working), its cleaner
to also add this dependency, because this service completely relies
on /tmp being available.

--- a/recipes-core/systemd/systemd-units/candump.service
+++ b/recipes-core/systemd/systemd-units/candump.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=candump
 After=can0.service local-fs.target
-Requires=can0.service
+Requires=can0.service local-fs.target
 DefaultDependencies=no
 
 [Service]
