Prepared for layer update as in BSP-Yocto-Ampliphy-i.MX6UL-PD24.1.0.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,10 +9,14 @@ BBFILE_COLLECTIONS += "medusa-dist"
 BBFILE_PATTERN_medusa-dist = "^${LAYERDIR}/"
 BBFILE_PRIORITY_medusa-dist = "40"
 
-LAYERSERIES_COMPAT_medusa-dist = "kirkstone"
+LAYERSERIES_COMPAT_medusa-dist = "scarthgap"
 
 # Additional license directories.
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
 # Layer dependencies
 LAYERDEPENDS_medusa-dist = "phytec medusa-bsp"
+
+# Keep BSP-Yocto-Ampliphy-i.MX6UL-PD22.1.1 (barebox & linux-mainline) for now
+# but use it with scarthgap layers as BSP-Yocto-Ampliphy-i.MX6UL-PD24.1.0
+LAYERSERIES_COMPAT_phytec = "kirkstone scarthgap"
