--- a/conf/templates/default/bblayers.conf.sample
+++ b/conf/templates/default/bblayers.conf.sample
@@ -7,6 +7,7 @@ BBFILES ?= ""
 
 OEROOT := "##OEROOT##"
 BBLAYERS ?= " \
+  ${OEROOT}/../meta-medusa-backport \
   ${OEROOT}/meta \
   ${OEROOT}/meta-poky \
   ${OEROOT}/meta-yocto-bsp \
