--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Tue Sep  3 16:56:07 2024
+# Thu Sep 19 13:45:00 2024
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -417,9 +417,9 @@ CONFIG_RUN_INIT=y
 #
 # Editors
 #
-# CONFIG_AWK is not set
-# CONFIG_FEATURE_AWK_LIBM is not set
-# CONFIG_FEATURE_AWK_GNU_EXTENSIONS is not set
+CONFIG_AWK=y
+CONFIG_FEATURE_AWK_LIBM=y
+CONFIG_FEATURE_AWK_GNU_EXTENSIONS=y
 CONFIG_CMP=y
 CONFIG_DIFF=y
 CONFIG_FEATURE_DIFF_LONG_OPTIONS=y
