Enable busybox clear and reset utilities.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -368,7 +368,7 @@ CONFIG_YES=y
 # Console Utilities
 #
 CONFIG_CHVT=y
-# CONFIG_CLEAR is not set
+CONFIG_CLEAR=y
 CONFIG_DEALLOCVT=y
 CONFIG_DUMPKMAP=y
 CONFIG_FGCONSOLE=y
@@ -385,7 +385,7 @@ CONFIG_FEATURE_LOADFONT_PSF2=y
 CONFIG_FEATURE_LOADFONT_RAW=y
 CONFIG_LOADKMAP=y
 CONFIG_OPENVT=y
-# CONFIG_RESET is not set
+CONFIG_RESET=y
 CONFIG_RESIZE=y
 CONFIG_FEATURE_RESIZE_PRINT=y
 CONFIG_SETCONSOLE=y
