Build busybox's nandwrite and nanddump since mtd-utils-tests is not in image.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -826,8 +826,8 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 CONFIG_MICROCOM=y
 CONFIG_MIM=y
 # CONFIG_MT is not set
-# CONFIG_NANDWRITE is not set
-# CONFIG_NANDDUMP is not set
+CONFIG_NANDWRITE=y
+CONFIG_NANDDUMP=y
 CONFIG_PARTPROBE=y
 CONFIG_RAIDAUTORUN=y
 CONFIG_READAHEAD=y
