Error handling for non-mountable/writeable logging and inact. system partition.
This is a basic error handling and will not apply for corrupted partitions that
can be mounted and provide write access but then yield errors like
"rm: can't remove 'etc': Structure needs cleaning".

--- a/recipes-core/systemd/systemd-units/mnt-log.service
+++ b/recipes-core/systemd/systemd-units/mnt-log.service
@@ -4,7 +4,7 @@ After=late-init.target
 
 [Service]
 Type=oneshot
-ExecStart=/bin/mount -t ubifs /dev/ubi0_3 /mnt/log
+ExecStart=/etc/scripts/mnt-log.sh start
 ExecStart=/bin/mkdir -p /mnt/log/journal /mnt/log/journal.wd
 ExecStart=/usr/bin/find /mnt/log/ -mindepth 1 -maxdepth 1 -type d ! -name "journal" ! -name "journal.wd" -exec rm -rf {} +
 ExecStart=/bin/chown -R root:systemd-journal /mnt/log/
@@ -13,7 +13,7 @@ ExecStart=/bin/systemd-tmpfiles --create --prefix=/var/log/journal
 ExecStart=/bin/journalctl --flush
 ExecStop=/bin/journalctl --sync
 ExecStop=/bin/umount -l /var/log/journal
-ExecStop=/bin/umount /mnt/log
+ExecStop=/etc/scripts/mnt-log.sh stop
 ExecStop=/bin/umount -l /tmp
 RemainAfterExit=yes
 
