Added support for reload in mnt-rfs.service.

--- a/recipes-core/systemd/systemd-units/mnt-rfs.service
+++ b/recipes-core/systemd/systemd-units/mnt-rfs.service
@@ -5,4 +5,5 @@ Description=mnt-rfs
 Type=oneshot
 ExecStart=/etc/scripts/mnt-rfs.sh start
 ExecStop=/etc/scripts/mnt-rfs.sh stop
+ExecReload=/etc/scripts/mnt-rfs.sh reload
 RemainAfterExit=yes
